--- a/design/nft.css
+++ b/design/nft.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400&family=Lexend+Deca:wght@100;200;300;400&family=Lobster&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Outfit:wght@100;200;300;400;500;600;700&family=Poppins:wght@100;200;300;400;500;600;700&family=Raleway:ital,wght@0,300;0,400;0,700;0,800;0,900;1,300;1,400;1,700;1,800;1,900&family=Roboto:ital,wght@0,300;1,100;1,300&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -87,7 +88,7 @@ body{
 }
 .img2{
    width: 260px;
-   background: url(design/image-equilibrium.jpg) no-repeat;
+   background: url(./image-equilibrium.jpg) no-repeat;
    height: 260px;
    position: relative;
    border-radius: 10px;
@@ -95,7 +96,7 @@ body{
    transition: 1s ease-out;
 }
 .img2:hover{
-   background:linear-gradient(45deg, hsla(178, 100%, 50%, 0.596) 100%,transparent 100%), url(design/image-equilibrium.jpg);
+   background:linear-gradient(45deg, hsla(178, 100%, 50%, 0.596) 100%,transparent 100%), url(./image-equilibrium.jpg);
    transition: 1s ease-in;
    background-size: 200%;
    background-position:center center;
